--- a/gb/22/8/24/n13809150.md
+++ b/gb/22/8/24/n13809150.md
@@ -2,9 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：画家户外绘画与实景的无缝完美融合</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/08/id13809155-Richard-J-Oliver-plein-web-10-1-1200x720-600x400.jpg" />///image2=```diff
-- 洛杉矶艺术家理查德?奥利弗（Richard Oliver）怀着对自然世界的深深钦佩，用油画描绘了加州令人惊叹的风景。（理查德?奥利弗提供）
-```
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/08/id13809155-Richard-J-Oliver-plein-web-10-1-1200x720-600x400.jpg" />
 <h6>洛杉矶艺术家理查德?奥利弗（Richard Oliver）怀着对自然世界的深深钦佩，用油画描绘了加州令人惊叹的风景。（理查德?奥利弗提供）
 </h6>
 <hr>
@@ -16,7 +14,7 @@
 <figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2022/07/26/Richard-J-Oliver-plein-art-9-1.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2022/07/26/Richard-J-Oliver-plein-art-9-1.jpg" width="450" b="450" /></a><figcaption class="wp-caption-text">（理查德?奥利弗提供）</figcaption></figure>
 <figure style="width: 602px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2022/05/21/Richard-J-Oliver-plein-art-14-1.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2022/05/21/Richard-J-Oliver-plein-art-14-1.jpg" width="602" b="451" /></a><figcaption class="wp-caption-text">（理查德?奥利弗提供）</figcaption></figure>
 <figure style="width: 601px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2022/05/21/Richard-J-Oliver-plein-art-7-1.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2022/05/21/Richard-J-Oliver-plein-art-7-1.jpg" width="601" b="451" /></a><figcaption class="wp-caption-text">（理查德?奥利弗提供）</figcaption></figure>
-<p style="text-align: center;"><a src=""></a><a href="https://dfu0th2rj4x8t.cloudfront.net/H7u&#29983/embed/480293ec-6a55-41ed-b529-fd9f83a59013?r=16x9&amp;d=130" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
+<p style="text-align: center;"><a loading="lazy" data2-src="https://vod.brightchat.com/embed/480293ec-6a55-41ed-b529-fd9f83a59013?r=16x9&amp;d=130" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
 （理查德?奥利弗提供）</p>
 <p>对于来自英国威尔士的奥利弗来说，前往法国普罗旺斯、内华达山脉的东部及加利福尼亚海岸等地旅行是最有意义的艺术休假。</p>
 <p>他为远足而保持装备轻便——携带绘画材料会让装备变重！但他仍然喜欢背包到人迹罕至、偏远却迷人的地方。“普罗旺斯的灯光如此温暖，那里的建筑和葡萄园给人无穷的灵感”，他说，“我已经多次参观并勾勒了内华达（Sierras）山脉，它总是让我回味无穷。”</p>
@@ -43,36 +41,33 @@
 <figure style="width: 451px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2022/07/26/Richard-J-Oliver-plein-art-834354-1.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2022/07/26/Richard-J-Oliver-plein-art-834354-1.jpg" width="451" b="599" /></a><figcaption class="wp-caption-text">画家在作画现场。（理查德?奥利弗提供）</figcaption></figure>
 <figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2022/07/26/Richard-J-Oliver-plein-art-4-1.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2022/07/26/Richard-J-Oliver-plein-art-4-1.jpg" width="450" b="472" /></a><figcaption class="wp-caption-text">画家展示他的作品。（理查德?奥利弗提供）</figcaption></figure>
 <p>责任编辑：韩玉#</p>
-	
-<hr>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/10/n11579837.md#1">组图：美国男子的炭笔画如黑白照片般逼真</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/9/n11778982.md#1">组图：加拿大男子画野生动物 像照片般逼真</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/28/n13403930.md#1">组图：艺术家用打字机按键创造独特的画作</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/18/n13655958.md#1">组图：天才艺术家凭记忆画出超逼真动物</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/4/n11300386.md#1" target="_blank">林辉：大饥荒 中共却无偿送几内亚万吨大米</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/13/n11110799.md#1" target="_blank">重庆八旬教师控告江泽民 遭报复</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/5/n9109957.md#1" target="_blank">永远的传奇—从长春到世界（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296328.md#1">青春走一回  儿子，谢谢你教会我这一课！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296470.md#1">【未解之谜】数千年来无人敢登顶 西藏神山冈仁波齐峰之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279168.md#1">【历史的瞬间】贝隆夫人──她的谎言与美丽，让阿根廷哭泣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294567.md#1">神秘奇观：雷震飞石 奇异预兆应验</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294632.md#1">一念让巫婆变成美女 启发人间相处之道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299500.md#1">【马克时空】盘点2024环太军演中的明星武器</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299524.md#1">【车评】比混能更省油 2024 Toyota Prius Prime SE</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299288.md#1">【未解之谜】多个预言印证? 2025年有巨变 日台要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298313.md#1">台风凯米带来中南部豪雨 26日全台停班停课一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297614.md#1">“格美”升级超强台风 中国超10省将受影响</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297939.md#1">传胡歌获90后妻子陪伴 黄曦宁穿着朴素低调</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298693.md#1">赵丽颖带5岁儿子与父母聚餐 画面温馨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14297194.md#1">沈腾新片《抓娃娃》后续票房乏力？两天降3亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299514.md#1">席琳·迪翁巴黎奥运开幕式献唱《爱的赞歌》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298646.md#1">贝克汉姆夫妇结婚25周年 两人户外恩爱照曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297554.md#1">瓷砖接缝处有污渍？ 专家教你迅速清除</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296813.md#1">超级食物酪梨怎么切 简单4步骤学起来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297898.md#1">这蔬菜让人百吃不厌 专家说多多益善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296131.md#1">大型研究：每日服复合维生素增加死亡风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298289.md#1">为何太空人在太空中避免吃这5种食物？</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544989.md#1">开饺子店被吐槽出餐慢 大陆演员谭凯直播致歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/8/24/n13809150.htm">组图：画家户外绘画与实景的无缝完美融合</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/8/24/n13809150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
